--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Credits:
     <!--Meta-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>abhineet97 - the website of Abhineet Tamrakar</title>
+    <title>The Website of Abhineet Tamrakar</title>
     <meta name="description" content="The website of Abhineet Tamrakar.">
     <link href="https://abhineet97.github.io" rel="canonical">
     <link href="https://plus.google.com/+AbhineetTamrakar" rel="publisher">
