Added link to GPG Key

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Credits:
       <a href="https://github.com/abhineet97">Github</a>
       <a href="https://www.google.com/?q=abhineet97">Everything Else</a>
       </p>
-      <p>And here's my <a>PGP</a> key, if you might every need it.</p>
+      <p>And here's my <a href="https://gist.github.com/abhineet97/ad20278e6ba4e245dfd9">PGP</a> key, if you might every need it.</p>
     </article>
     <!--
     <footer>Credits:<ul>
