--- a/index.html
+++ b/index.html
@@ -1,51 +1,37 @@
 <!DOCTYPE html>
-<!--
-Credits:
-- Github Pages
-- HTML5Shiv
-- Normalize.css
--->
 <html>
-  <head>
+<head>
 
-    <!--Meta-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Abhineet Tamrakar</title>
-    <meta name="description" content="The website of Abhineet Tamrakar.">
-    <link href="https://abhineet97.github.io" rel="canonical">
-    <link href="https://plus.google.com/+AbhineetTamrakar" rel="publisher">
+<!--Meta-->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Abhineet Tamrakar</title>
+<meta name="description" content="The website of Abhineet Tamrakar.">
+<link href="https://abhineet97.github.io" rel="canonical">
+<link href="https://plus.google.com/+AbhineetTamrakar" rel="publisher">
+<style>
+body{
+        font-family: sans-serif;
+        font-size:large;
+        text-align:center;
+        width: 40em;
+        margin: auto;
+}
 
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <![endif]-->
+img{width:22em;}
 
-    <!--Stylesheets-->
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-  </head>
-  <body>
-  <header>
-    <img src="logo.png">
-    <h1>ABHINEET TAMRAKAR</h1>
-    <p>Welcome To My Webpage!</p>
-    </header>
-    <article>
-      <p>Here are some links that might help you stalk me.</p>
-      <p>
-      <a href="https://twitter.com/abhineet97">Twitter</a>
-      <a href="https://github.com/abhineet97">Github</a>
-      <a href="https://www.google.com/?q=abhineet97">Everything Else</a>
-      </p>
-      <p>And here's my <a href="https://gist.github.com/abhineet97/ad20278e6ba4e245dfd9">PGP</a> key, if you might every need it.</p>
-    </article>
-    <!--
-    <footer>Credits:<ul>
-    <li><a href="https://pages.github.com/">Github</a></li>
-    <li><a href="https://github.com/afarkas/html5shiv">HTML5Shiv</a></li>
-    <li><a href="https://necolas.github.io/normalize.css">Normalize.css</a></li>
-    </ul></footer>
-    -->
-  </body>
+a{font-family: monospace;}
+</style>
+</head>
+<body>
+<header>
+        <img src="https://avatars1.githubusercontent.com/u/11965776?v=3&s=500">
+        <h1>ABHINEET TAMRAKAR</h1>
+</header>
+<article>
+        <p>Here are some links that might help you stalk me:</p>
+        <p><a href="https://twitter.com/abhineet97">Twitter</a> &middot; <a href="https://github.com/abhineet97">Github</a> &middot; <a href="https://www.google.com/?q=abhineet97">Everything Else</a></p>
+        <p>And here's my <a href="https://gist.github.com/abhineet97/ad20278e6ba4e245dfd9">PGP</a> key, if you might every need it.</p>
+</article>
+</body>
 </html>
