--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width">
 <title>Abhineet Tamrakar</title>
 <meta name="description" content="The website of Abhineet Tamrakar.">
 <link href="https://abhineet97.github.io" rel="canonical">
@@ -12,11 +12,10 @@ body{
         font-family: sans-serif;
         font-size:large;
         text-align:center;
-        width: 40em;
         margin: auto;
 }
 
-img{width:22em;}
+img{width:100%; max-width:25rem;}
 
 a{font-family: monospace;}
 </style>
