--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="description" content="The website of Abhineet Tamrakar.">
 <link href="https://abhineet97.github.io" rel="canonical">
 <link href="https://plus.google.com/+AbhineetTamrakar" rel="publisher">
+<meta name="google-site-verification" content="fLNwUjujRBNrEQdQwQE-AGS8sNlOHyUspwFOmXU3u0E">
 <style>
 body{
         font-family: sans-serif;
