--- a/index.html
+++ b/index.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<title>Abhineet Tamrakar</title>
-<meta name="description" content="The website of Abhineet Tamrakar.">
-<link href="https://abhineet97.github.io" rel="canonical">
-<link href="https://plus.google.com/+AbhineetTamrakar" rel="publisher">
-<style>
-body{
-        font-family: sans-serif;
-        font-size:large;
-        text-align:center;
-        margin: auto;
-}
-
-img{width:100%; max-width:25rem;}
-
-a{font-family: monospace;}
-</style>
-</head>
-<body>
-<header>
-        <img src="https://avatars1.githubusercontent.com/u/11965776?v=3&s=500">
-        <h1>ABHINEET TAMRAKAR</h1>
-</header>
-<article>
-        <p>Here are some links that might help you stalk me:</p>
-        <p><a href="https://twitter.com/abhineet97">Twitter</a> &middot; <a href="https://github.com/abhineet97">Github</a> &middot; <a href="https://www.google.com/?q=abhineet97">Everything Else</a></p>
-        <p>And here's my <a href="https://gist.github.com/abhineet97/ad20278e6ba4e245dfd9">PGP</a> key, if you might every need it.</p>
-</article>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="The website of Abhineet Tamrakar.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Abhineet Tamrakar</title>
+    
+    <link href='https://fonts.googleapis.com/css?family=Roboto:500' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="material.min.css">
+    <style>
+      .mycard.mdl-card {
+        width: 320px;
+        margin: 5% auto;
+      }
+      
+      .mycard > .mdl-card__title {
+        height: 320px;
+        color: #fff;
+        background: #000 url('avatar.png') center / cover;
+      }
+    </style>
+  </head>
+  
+  <!--
+  Credits:
+  * Google Fonts: https://fonts.google.com/
+  * Material Design Lite: http://www.getmdl.io/
+  * Github Pages: https://pages.github.com/
+  -->
+  
+  <body>
+    <div class="mycard mdl-card mdl-shadow--4dp">
+      <div class="mdl-card__title mdl-card--expand">
+        <h1 class="mdl-card__title-text">Abhineet Tamrakar</h1>
+      </div>
+      <div class="mdl-card__supporting-text">
+        I'm a high school student living in India.<br>
+        You can contact me using any of the below mediums.
+      </div>
+      <div class="mdl-card__actions mdl-card--border">
+        <a class="mdl-button mdl-button--colored" href="https://twitter.com/abhineet97">Twitter</a>
+        <a class="mdl-button mdl-button--colored" href="https://github.com/abhineet97">Github</a>
+        <a class="mdl-button mdl-button--colored" href="https://gist.github.com/abhineet97/ad20278e6ba4e245dfd9">PGP Key</a>
+      </div>
+    </div>
+  </body>
 </html>
