--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Abhineet Tamrakar</title>
     
-    <link href='https://fonts.googleapis.com/css?family=Roboto:500' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="material.min.css">
     <style>
       .mycard.mdl-card {
