More precise CSS and a viewport tweak
Instead of a single background, now there are multiple.
Changed the intial-scale property of viewport from 1 to 0.9, so that now
the site looks better on phones with small screen, like mine.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="The website of Abhineet Tamrakar.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Abhineet Tamrakar</title>
     
     <link href='//fonts.googleapis.com/css?family=Roboto:500' rel='stylesheet' type='text/css'>
@@ -18,7 +18,9 @@
       .mycard > .mdl-card__title {
         height: 320px;
         color: #fff;
-        background: #000 url('avatar.png') center / cover;
+        background-color: #000;
+        background-image: url('avatar.png');
+        background-size: cover;
       }
     </style>
   </head>
