--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ a:active {
   <h2 class="name">Abhineet Tamrakar</h2>
 </header>
 <main>
-<a href="https://twitter.com/abhineet97">Twitter</a>
-<a href="https://github.com/abhineet97">Github</a>
-<a href="https://keybase.io/abhineet97">PGP</a>
+<a rel="me" href="https://twitter.com/abhineet97">Twitter</a>
+<a rel="me" href="https://github.com/abhineet97">Github</a>
+<a rel="me" href="https://keybase.io/abhineet97">PGP</a>
 </main>
 <!-- Built with love using Web Starter Kit -->
 </body>
