Remove class attributes.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
   text-align: center;
 }
 
-.heading {
+header h1 {
   font-size: 5em;
   margin: 20px auto;
   text-shadow: 5px 5px white;
@@ -31,7 +31,7 @@ main {
   margin: 48px;
 }
 
-.name {
+header h2 {
   color: #fff;
 }
 
@@ -53,7 +53,7 @@ a:active {
 }
 
 @media (min-width:600px) {
-  .heading {
+  header h1 {
     font-size: 10em;
     margin-top: 10%;
   }
@@ -77,8 +77,8 @@ a:active {
 </head>
 <body>
 <header>
-  <h1 class="heading">HELLO</h1>
-  <h2 class="name">Abhineet Tamrakar</h2>
+  <h1>HELLO</h1>
+  <h2>Abhineet Tamrakar</h2>
 </header>
 <main>
 <a rel="me" href="https://twitter.com/abhineet97">Twitter</a>
