--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <!-- Color the status bar on mobile devices -->
   <meta name="theme-color" content="#808080">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="/manifest.webmanifest">
   <style>
     body {
       background: gray;
