--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 ---
 layout: layouts/home.html
 ---
+
 <header>
   <h1>HELLO</h1>
 </header>
 <main>
-  <p> I'm <strong>Abhineet</strong> &mdash; a web developer &amp; systems
-  programmer from <a href="https://raipur.gov.in">Raipur</a>. Feel free to
-  contact me using any of the following, I'll get back to you as soon as
-  possible.</p>
+  <p>
+    I'm <strong>Abhineet</strong> &mdash; a programmer from
+    <a href="https://raipur.gov.in">Raipur</a>. Feel free to contact me using
+    any of the following, I'll get back to you as soon as possible.
+  </p>
 
   <ul id="links">
     <li><a rel="me" href="mailto:abhineet97@gmail.com">Email</a></li>
