Rephrase main content

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@ layout: layouts/home.html
 <main>
   <p>
     I'm <strong>Abhineet</strong> &mdash; a programmer from
-    <a href="https://raipur.gov.in">Raipur</a>. Feel free to contact me using
-    any of the following, I'll get back to you as soon as possible.
+    <a href="https://raipur.gov.in">Raipur</a>. This website is my home on the
+    web. I plan to add more sections to it in the future (so please come back
+    again sometime!).
   </p>
 
+  <p>To get in touch, feel free to email me at <a rel="me" href="mailto:abhineet97@gmail.com">abhineet97@gmail.com</a>.</p>
+
+  <p>Some other websites where you can find me:
   <ul id="links">
-    <li><a rel="me" href="mailto:abhineet97@gmail.com">Email</a></li>
     <li><a rel="me" href="https://twitter.com/abhineet97">Twitter</a></li>
     <li><a rel="me" href="https://github.com/abhineet97">Github</a></li>
   </ul>
+  </p>
 </main>
