--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ layout: layouts/home.html
   <p>
     I'm <strong>Abhineet</strong> &mdash; a programmer from
     <a href="https://raipur.gov.in">Raipur</a>. This website is my home on the
-    web. I plan to add more sections to it in the future (so please come back
-    again sometime!).
+    web. I plan to add more sections to it in the future, so please come back
+    again sometime!
   </p>
 
   <p>To get in touch, feel free to email me at <a rel="me" href="mailto:abhineet97@gmail.com">abhineet97@gmail.com</a>.</p>
