Add résumé link

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@ layout: layouts/home.html
 
   <p>To get in touch, feel free to email me at <a rel="me" href="mailto:abhineet97@gmail.com">abhineet97@gmail.com</a>.</p>
 
-  <p>Some other websites where you can find me:
+  <p>Some links that you might find interesting:
   <ul id="links">
     <li><a rel="me" href="https://twitter.com/abhineet97">Twitter</a></li>
     <li><a rel="me" href="https://github.com/abhineet97">Github</a></li>
+    <li><a href="/resume">Résumé</a></li>
   </ul>
   </p>
 </main>
