deploy: 942a5a32b0044d1c54f6c13e3e02c3aa3fcacf0b

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
   <p>Some links that you might find interesting:
   <ul id="links">
+    <li><a rel="me" href="https://mstdn.social/@abhineet97">Mastodon</a></li>
     <li><a rel="me" href="https://twitter.com/abhineet97">Twitter</a></li>
     <li><a rel="me" href="https://github.com/abhineet97">Github</a></li>
     <li><a href="/resume">Résumé</a></li>
